refactor: update header type two component

--- a/about/index.html
+++ b/about/index.html
@@ -4,119 +4,338 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/public/css/base.css" />
-    <link rel="stylesheet" href="/public/css/components/header-type-2.css" />
-    <link rel="stylesheet" href="/public/css/components/search.css" />
-    <link rel="stylesheet" href="/public/css/components/footer.css" />
+    <link rel="stylesheet" href="./css/components.css" />
     <link rel="stylesheet" href="./css/style.css" />
+
+    <script src="/public/js/utils.js" type="module" defer></script>
     <title>About</title>
   </head>
   <body>
-    <header class="header">
-      <a href="../public/"
-        ><img src="../assets/img/logo.png" alt="logo" class="logo-square"
-      /></a>
+    <header class="container">
+      <!-- Header Navigation -->
       <nav class="main-nav">
-        <div class="top-container">
-          <ul class="auxiliary-links">
-            <li class="nav-links text-small">
-              <a href="/admission/">ADMISSIONS</a>
-              <svg class="sprite sprite--light sprite--normal" role="img">
-                <use
-                  href="../assets/img/sprite.svg#icon-chevron-down-short"
-                ></use>
+        <div class="nav-wrapper">
+          <a href="/public/" class="logo-wrapper" aria-label="home page">
+            <img src="/assets/img/logo.png" alt="logo" class="logo-square" />
+            <img
+              src="https://dummyimage.com/140x60/eee/aaa"
+              alt="logo"
+              class="logo-wide"
+            />
+          </a>
+
+          <div class="top-container">
+            <ul class="fix-white-space">
+              <li class="nav-links text-small">
+                <a href="/admission/">ADMISSIONS</a>
+                <svg class="sprite sprite--light sprite--normal" role="img">
+                  <use
+                    href="/assets/img/sprite.svg#icon-chevron-down-short"
+                  ></use>
+                </svg>
+              </li>
+              <li class="nav-links text-small">
+                <a href="#">ACADEMICS</a>
+                <svg class="sprite sprite--light sprite--normal" role="img">
+                  <use
+                    href="/assets/img/sprite.svg#icon-chevron-down-short"
+                  ></use>
+                </svg>
+              </li>
+              <li class="nav-links text-small">
+                <a href="/notice/">NOTICE</a>
+                <svg class="sprite sprite--light sprite--normal" role="img">
+                  <use
+                    href="/assets/img/sprite.svg#icon-chevron-down-short"
+                  ></use>
+                </svg>
+              </li>
+              <li class="nav-links text-small">
+                <a href="/about/">ABOUT</a>
+                <svg class="sprite sprite--light sprite--normal" role="img">
+                  <use
+                    href="/assets/img/sprite.svg#icon-chevron-down-short"
+                  ></use>
+                </svg>
+              </li>
+            </ul>
+          </div>
+
+          <div class="bottom-container">
+            <h2 class="heading-2 nav-heading">ABOUT</h2>
+            <img
+              src="/assets/img/SeparatorChevron.png"
+              alt=""
+              class="separator-img"
+            />
+            <ul class="fix-white-space">
+              <li class="nav-links text-large">
+                <a href="#">
+                  Link One
+                  <svg class="sprite sprite--light sprite--normal" role="img">
+                    <use
+                      href="/assets/img/sprite.svg#icon-chevron-down-short"
+                    ></use>
+                  </svg>
+                </a>
+                <ul class="sub-menu">
+                  <li><a href="#" class="text-small-extra">List item 1</a></li>
+                  <li><a href="#" class="text-small-extra">List item 2</a></li>
+                  <li><a href="#" class="text-small-extra">List item 3</a></li>
+                  <li><a href="#" class="text-small-extra">List item 4</a></li>
+                </ul>
+              </li>
+              <li class="nav-links text-large">
+                <a href="#">
+                  Link Two
+                  <svg class="sprite sprite--light sprite--normal" role="img">
+                    <use
+                      href="/assets/img/sprite.svg#icon-chevron-down-short"
+                    ></use>
+                  </svg>
+                </a>
+                <ul class="sub-menu">
+                  <li><a href="#" class="text-small-extra">List item 1</a></li>
+                  <li><a href="#" class="text-small-extra">List item 2</a></li>
+                  <li><a href="#" class="text-small-extra">List item 3</a></li>
+                  <li><a href="#" class="text-small-extra">List item 4</a></li>
+                </ul>
+              </li>
+              <li class="nav-links text-large">
+                <a href="#">
+                  Link Three
+                  <svg class="sprite sprite--light sprite--normal" role="img">
+                    <use
+                      href="/assets/img/sprite.svg#icon-chevron-down-short"
+                    ></use>
+                  </svg>
+                </a>
+                <ul class="sub-menu">
+                  <li><a href="#" class="text-small-extra">List item 1</a></li>
+                  <li><a href="#" class="text-small-extra">List item 2</a></li>
+                  <li><a href="#" class="text-small-extra">List item 3</a></li>
+                  <li><a href="#" class="text-small-extra">List item 4</a></li>
+                </ul>
+              </li>
+            </ul>
+          </div>
+
+          <div class="search-widget">
+            <search>
+              <form
+                id="searchForm"
+                action="/search/"
+                method="get"
+                class="search-form"
+                aria-selected="false"
+              >
+                <input
+                  id="searchInput"
+                  type="search"
+                  class="search-box text-small-extra"
+                  placeholder="Search..."
+                />
+                <button
+                  id="btnSearch"
+                  type="submit"
+                  class="btn--search"
+                  aria-label="search-button"
+                >
+                  <svg
+                    class="sprite sprite--bold sprite--light sprite--medium"
+                    role="img"
+                  >
+                    <use href="/assets/img/sprite.svg#search"></use>
+                  </svg>
+                </button>
+              </form>
+            </search>
+            <button class="btn__mobile-nav" id="btnCollapsed">
+              <svg class="sprite sprite--light sprite--medium" role="img">
+                <use href="/assets/img/sprite.svg#icon-menu"></use>
               </svg>
-              <ul class="sub-menu">
-                <li><a href="#" class="text-small-extra">List item 1</a></li>
-                <li><a href="#" class="text-small-extra">List item 2</a></li>
-                <li><a href="#" class="text-small-extra">List item 3</a></li>
-                <li><a href="#" class="text-small-extra">List item 4</a></li>
-              </ul>
-            </li>
-            <li class="nav-links text-small">
-              <a href="#">ACADEMICS</a>
-              <svg class="sprite sprite--light sprite--normal" role="img">
-                <use
-                  href="../assets/img/sprite.svg#icon-chevron-down-short"
-                ></use>
-              </svg>
-              <ul class="sub-menu">
-                <li><a href="#" class="text-small-extra">List item 1</a></li>
-                <li><a href="#" class="text-small-extra">List item 2</a></li>
-                <li><a href="#" class="text-small-extra">List item 3</a></li>
-                <li><a href="#" class="text-small-extra">List item 4</a></li>
-              </ul>
-            </li>
-            <li class="nav-links text-small">
-              <a href="/notice/">NOTICE</a>
-              <svg class="sprite sprite--light sprite--normal" role="img">
-                <use
-                  href="../assets/img/sprite.svg#icon-chevron-down-short"
-                ></use>
-              </svg>
-              <ul class="sub-menu">
-                <li><a href="#" class="text-small-extra">List item 1</a></li>
-                <li><a href="#" class="text-small-extra">List item 2</a></li>
-                <li><a href="#" class="text-small-extra">List item 3</a></li>
-                <li><a href="#" class="text-small-extra">List item 4</a></li>
-              </ul>
-            </li>
-            <li class="nav-links text-small">
-              <a href="/about/">ABOUT</a>
-              <svg class="sprite sprite--light sprite--normal" role="img">
-                <use
-                  href="../assets/img/sprite.svg#icon-chevron-down-short"
-                ></use>
-              </svg>
-              <ul class="sub-menu">
-                <li><a href="#" class="text-small-extra">List item 1</a></li>
-                <li><a href="#" class="text-small-extra">List item 2</a></li>
-                <li><a href="#" class="text-small-extra">List item 3</a></li>
-                <li><a href="#" class="text-small-extra">List item 4</a></li>
-              </ul>
-            </li>
-          </ul>
-          <form action="get" class="search-form">
-            <input type="search" class="search-box" placeholder="Search..." />
-            <svg class="sprite sprite--light sprite--normal" role="img">
-              <use href="../assets/img/sprite.svg#search"></use>
-            </svg>
-          </form>
-        </div>
-        <div class="bottom-container">
-          <h2 class="heading-2 heading-primary">ABOUT</h2>
-          <img
-            src="../assets/img/SeparatorChevron.png"
-            alt="a separator"
-            class="separator-img"
-          />
-          <ul class="primary-links">
-            <li class="text-large">
-              Link One
-              <svg class="sprite sprite--light sprite--normal" role="img">
-                <use
-                  href="../assets/img/sprite.svg#icon-chevron-down-short"
-                ></use>
-              </svg>
-            </li>
-            <li class="text-large">
-              Link Two
-              <svg class="sprite sprite--light sprite--normal" role="img">
-                <use
-                  href="../assets/img/sprite.svg#icon-chevron-down-short"
-                ></use>
-              </svg>
-            </li>
-            <li class="text-large">
-              Link Three
-              <svg class="sprite sprite--light sprite--normal" role="img">
-                <use
-                  href="../assets/img/sprite.svg#icon-chevron-down-short"
-                ></use>
-              </svg>
-            </li>
-          </ul>
+            </button>
+          </div>
         </div>
       </nav>
+      <!-- End of Header Navigation -->
+
+      <!-- Mobile Navigation -->
+      <nav class="mobile-nav">
+        <button class="btn__mobile-nav" id="btnExpanded">
+          <svg class="sprite sprite--light sprite--large" role="img">
+            <use href="/assets/img/sprite.svg#icon-cross"></use>
+          </svg>
+        </button>
+        <ul class="mobile-nav__menu">
+          <li
+            class="mobile-nav__links mobile-nav__primary"
+            aria-expanded="false"
+          >
+            <a href="#" class="text-medium-bold"
+              >ADMISSIONS
+              <svg class="sprite sprite--light sprite--normal" role="img">
+                <use href="/assets/img/sprite.svg#icon-chevron-down"></use>
+              </svg>
+            </a>
+            <ul>
+              <li class="mobile-nav__sub-links text-small-extra">
+                <a href="#">Link One</a>
+              </li>
+              <li class="mobile-nav__sub-links text-small-extra">
+                <a href="#">Link Two</a>
+              </li>
+              <li class="mobile-nav__sub-links text-small-extra">
+                <a href="#">Link Three</a>
+              </li>
+            </ul>
+          </li>
+
+          <li
+            class="mobile-nav__links mobile-nav__primary"
+            aria-expanded="false"
+          >
+            <a href="#" class="text-medium-bold"
+              >ACADEMICS
+              <svg class="sprite sprite--light sprite--normal" role="img">
+                <use href="/assets/img/sprite.svg#icon-chevron-down"></use>
+              </svg>
+            </a>
+            <ul>
+              <li class="mobile-nav__sub-links text-small-extra">
+                <a href="#">Link One</a>
+              </li>
+              <li class="mobile-nav__sub-links text-small-extra">
+                <a href="#">Link Two</a>
+              </li>
+              <li class="mobile-nav__sub-links text-small-extra">
+                <a href="#">Link Three</a>
+              </li>
+            </ul>
+          </li>
+
+          <li
+            class="mobile-nav__links mobile-nav__primary"
+            aria-expanded="false"
+          >
+            <a href="#" class="text-medium-bold"
+              >NOTICE
+
+              <svg class="sprite sprite--light sprite--normal" role="img">
+                <use href="/assets/img/sprite.svg#icon-chevron-down"></use>
+              </svg>
+            </a>
+            <ul>
+              <li class="mobile-nav__sub-links text-small-extra">
+                <a href="#">Link One</a>
+              </li>
+              <li class="mobile-nav__sub-links text-small-extra">
+                <a href="#">Link Two</a>
+              </li>
+              <li class="mobile-nav__sub-links text-small-extra">
+                <a href="#">Link Three</a>
+              </li>
+            </ul>
+          </li>
+
+          <li
+            class="mobile-nav__links mobile-nav__primary"
+            aria-expanded="false"
+          >
+            <a href="#" class="text-medium-bold"
+              >ABOUT
+
+              <svg class="sprite sprite--light sprite--normal" role="img">
+                <use href="/assets/img/sprite.svg#icon-chevron-down"></use>
+              </svg>
+            </a>
+            <ul>
+              <li class="mobile-nav__sub-links text-small-extra">
+                <a href="#">Link One</a>
+              </li>
+              <li class="mobile-nav__sub-links text-small-extra">
+                <a href="#">Link Two</a>
+              </li>
+              <li class="mobile-nav__sub-links text-small-extra">
+                <a href="#">Link Three</a>
+              </li>
+            </ul>
+          </li>
+
+          <li
+            class="mobile-nav__links mobile-nav__secondary"
+            aria-expanded="false"
+          >
+            <a href="#" class="text-medium-bold"
+              >Staff
+
+              <svg class="sprite sprite--light sprite--normal" role="img">
+                <use href="/assets/img/sprite.svg#icon-chevron-down"></use>
+              </svg>
+            </a>
+            <ul>
+              <li class="mobile-nav__sub-links text-small-extra">
+                <a href="#">Link One</a>
+              </li>
+              <li class="mobile-nav__sub-links text-small-extra">
+                <a href="#">Link Two</a>
+              </li>
+              <li class="mobile-nav__sub-links text-small-extra">
+                <a href="#">Link Three</a>
+              </li>
+            </ul>
+          </li>
+
+          <li
+            class="mobile-nav__links mobile-nav__secondary"
+            aria-expanded="false"
+          >
+            <a href="#" class="text-medium-bold"
+              >Students
+
+              <svg class="sprite sprite--light sprite--normal" role="img">
+                <use href="/assets/img/sprite.svg#icon-chevron-down"></use>
+              </svg>
+            </a>
+            <ul>
+              <li class="mobile-nav__sub-links text-small-extra">
+                <a href="#">Link One</a>
+              </li>
+              <li class="mobile-nav__sub-links text-small-extra">
+                <a href="#">Link Two</a>
+              </li>
+              <li class="mobile-nav__sub-links text-small-extra">
+                <a href="#">Link Three</a>
+              </li>
+            </ul>
+          </li>
+
+          <li
+            class="mobile-nav__links mobile-nav__secondary"
+            aria-expanded="false"
+          >
+            <a href="#" class="text-medium-bold"
+              >Parents
+
+              <svg class="sprite sprite--light sprite--normal" role="img">
+                <use href="/assets/img/sprite.svg#icon-chevron-down"></use>
+              </svg>
+            </a>
+            <ul>
+              <li class="mobile-nav__sub-links text-small-extra">
+                <a href="#">Link One</a>
+              </li>
+              <li class="mobile-nav__sub-links text-small-extra">
+                <a href="#">Link Two</a>
+              </li>
+              <li class="mobile-nav__sub-links text-small-extra">
+                <a href="#">Link Three</a>
+              </li>
+            </ul>
+          </li>
+        </ul>
+      </nav>
+      <!-- End of Mobile Navigation -->
     </header>
 
     <main>
