--- a/public/index.html
+++ b/public/index.html
@@ -51,11 +51,7 @@
       <nav class="main-nav">
         <div class="left-section">
           <img src="/assets/img/logo.png" alt="logo" class="logo-square" />
-          <img
-            src="https://placehold.co/140x60"
-            alt="a placeholder logo for small screen device"
-            class="logo-wide"
-          />
+          <img src="https://placehold.co/140x60" alt="logo" class="logo-wide" />
           <ul class="primary-links fix-white-space">
             <li class="nav-links text-medium-bold">
               <a href="/admission/">ADMISSIONS</a>
