--- a/search/index.html
+++ b/search/index.html
@@ -4,10 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/public/css/base.css" />
-    <link rel="stylesheet" href="/public/css/components/header-type-1.css" />
-    <link rel="stylesheet" href="/public/css/components/mobile-nav.css" />
-    <link rel="stylesheet" href="/public/css/components/search.css" />
-    <link rel="stylesheet" href="/public/css/components/footer.css" />
+    <link rel="stylesheet" href="./css/components.css" />
     <link rel="stylesheet" href="./css/style.css" />
 
     <script src="/public/js/utils.js" type="module" defer></script>
