fix: search section

--- a/admission/index.html
+++ b/admission/index.html
@@ -508,7 +508,7 @@
         </div>
       </section>
 
-      <section class="search">
+      <section class="container section search">
         <form action="get" class="search-form-large">
           <input
             type="search"
