--- a/search/index.html
+++ b/search/index.html
@@ -368,7 +368,9 @@
         </ul>
       </nav>
       <!-- End of Mobile Navigation -->
+    </header>
 
+    <main class="container section--inline">
       <!-- Breadcrumb Navigation -->
       <nav class="breadcrumb">
         <ul>
@@ -387,9 +389,7 @@
         </ul>
       </nav>
       <!-- End of Breadcrumb Navigation -->
-    </header>
 
-    <main class="container section">
       <section class="search-area">
         <h1 class="heading-1">Searching in Public High School</h1>
         <form action="get" class="search-form-large">
